--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
     <!-- rts-banner area start -->
     <div class="rts-banner-area-start">
         <div class="container">
-            <div class="row align-items-center">
+            <div class="row align-items-center justify-content-between">
                 <div class="col-lg-5">
                     <div class="banner-wrapper-one">
                         <span class="pre-title wow fadeInUp">Aramco Cyber Security CCC/CCC+</span>
@@ -82,22 +82,39 @@
                         </a>
                     </div>
                 </div>
-                <div class="col-lg-7">
-                    <div class="right-clippath-wrapper d-flex">
-                        <div class="left-image mt--120 mt_sm--70 jarallax jara-mask-1" data-speed=".7">
-                            <img loading="lazy" rel="preload" class="jarallax-img" src="assets/images/banner/08.webp"
-                                alt="banner">
-                        </div>
-                        <div class="left-image jarallax jara-mask-1" data-speed=".7">
-                            <img loading="lazy" rel="preload" class="jarallax-img" src="assets/images/banner/09.webp"
-                                alt="banner">
-                        </div>
-                        <div class="shape-image">
-                            <img loading="lazy" rel="preload" src="assets/images/banner/shape/040.svg" alt="shape"
-                                class="one wow move-left">
-                            <img loading="lazy" rel="preload" src="assets/images/banner/shape/020.svg" alt="shape"
-                                class="two wow move-left">
-                        </div>
+                <div class="col-lg-4">
+                    <div class="form-bg">
+                        <h4>Get in Touch</h4>
+                        <form class="contact-form" action="#" method="post" action="#" id="contact-form">
+                            <div class="half-input-wrapper">
+                                <div class="single">
+                                    <label for="name">First name</label>
+                                    <input type="text" id="name" name="first_name" placeholder="First name" required>
+                                </div>
+                                <div class="single">
+                                    <label for="last">Last name</label>
+                                    <input type="text" id="last" name="last_name" placeholder="Last name" required>
+                                </div>
+                            </div>
+                            <div class="single">
+                                <label for="email">Email</label>
+                                <input type="email" id="email" name="email" placeholder="Enter email" required>
+                            </div>
+                            <div class="single">
+                                <label for="phone">Phone</label>
+                                <input type="text" id="phone" name="phone" placeholder="Phone">
+                            </div>
+                            <div class="single">
+                                <label for="message">Message</label>
+                                <textarea id="message" name="message" placeholder="Leave us a message..."
+                                    required></textarea>
+                            </div>
+                            <div class="d-flex justify-content-center">
+                                <button type="submit" class="rts-btn btn-primary">Submit
+                                    <img class="injectable" src="assets/images/arrow.svg" alt="arrow">
+                                </button>
+                            </div>
+                        </form>
                     </div>
                 </div>
             </div>
